# 2048-probability-model

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md  model.cc  model.h  tablebase_schema.sql
src/: CMakeLists.txt  Common.h  Model.h  ModelTest.cc  TBTest.cc  TUI.cc  Tablebase.h  TemplateAdaptor.h  TemplateAdaptorGenerator.py  model.h
